--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Open Graph Meta Tags (for previews on Twitter, Facebook, etc.) -->
     <meta property="og:title" content="Click to Chat with Sexy Amateurs — No Registration Needed">
     <meta property="og:description" content="">
-    <meta property="og:image" content="https://i.postimg.cc/DfXXBW9N/Screenshot-20240515-030437-X.jpg">
+    <meta property="og:image" content="https://i.postimg.cc/NfTpHRMj/REDDIT-CAM-2.png">
     <meta property="og:type" content="website">
 
     <!-- Meta Refresh Redirect -->
